# CADDY-reimagined

./: .gitignore  CITATION.cff  HIGH-LEVEL ARCHITECTURE DRAFT.md  LICENSE  README.md  main.py  mission_api_client.py  pyproject.toml
api/: app.py  dependencies.py  schemas.py
api/routes/: health.py  missions.py  runtime.py
api/tests/: test_api_health.py  test_api_missions.py
autonomous_diver_companion/: behaviour_planner.py  report_builder.py  robot_system.py  schemas.py  tracker.py
autonomous_diver_companion/tests/: test_behaviour_planner.py  test_robot_system.py  test_tracker.py
communication/: acoustic_link.py  design.md  schemas.py
diver_wearable_unit_simulator/: SCHEMAS_DIAGRAM_SIMPLY_EXPLAINED.md  alarm_engine.py  preprocessing.py  schemas.py  simulator.py  state_estimator.py
diver_wearable_unit_simulator-v01/: alarm_engine.py  main.py  preprocessing.py  schemas.py  simulator.py  state_estimator.py
diver_wearable_unit_simulator-v01/diver_wearable_unit/: schemas.py  simulator.py
diver_wearable_unit_simulator-v01/tests/: test_compass.py  test_pipeline.py
diver_wearable_unit_simulator-v01/utils/: logger.py  packet_logger.py
diver_wearable_unit_simulator/tests/: test_preprocessor.py
diver_wearable_unit_simulator/utils/: logger.py  (+1 more)
mission-dashboard/: index.html  package-lock.json  package.json
mission_backend/: mission_backend.py  schemas.py
mission_logging/: mission_logger.py  schemas.py
mission_runtime/: mission_runtime.py  schemas.py
shared/: robot_protocol.py  shared_protocol.py
surface_gateway_simulator/: gateway.py  schemas.py
(+20 files in other folders)
