[project]
name = "caddy-reimagined"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx2>=2.5.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = [
    "diver_wearable_unit_simulator-v01/tests"
]
pythonpath = [
    "diver_wearable_unit_simulator-v01"
]
